--- a/data/v2rayse-free.yaml
+++ b/data/v2rayse-free.yaml
@@ -1,10 +1,11 @@
 ####################################
 # 创建者：v2rayse.com
-# 客户端：Clash
-# 创建时间：2023-10-02 16:21:10
+# 客户端：Clash.Meta
+# 创建时间：2023-10-03 15:44:47
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
+# !!当前配置文件请使用基于 Clash.Meta 内核程序
 mixed-port: 7890
 allow-lan: true
 log-level: info
@@ -85,109 +86,109 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇭🇰_HK_香港","type":"vmess","server":"156.245.8.146","port":42952,"cipher":"auto","uuid":"63b4b829-7f01-4e26-b037-f04b1f098765","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"free2.6114514.xyz","port":2052,"cipher":"auto","uuid":"8204f631-8a71-4f6a-821d-6c117edaf0fa","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"downloads3.6114514.xyz"}}}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"156.225.67.38","port":443,"cipher":"auto","uuid":"de491802-233e-47f2-8c6c-d19bcf5bd56b","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1692256902430"}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"156.225.67.102","port":52792,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"tunneltransfer.bpyjc.com","port":8880,"cipher":"auto","uuid":"22fede49-0280-4472-980e-4549f8bcb53c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"us.bpyjc.com"}}}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"ns1.v2-vip.fun","port":80,"cipher":"auto","uuid":"bffa23aa-ae0a-4c02-af77-2a14c8c0b81c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v004.ssrsub.com"}}}
-  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"cfcdn1.sanfencdn9.com","port":2052,"cipher":"auto","uuid":"f1266f1e-fa8c-4efa-9522-fae526ab1a79","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/video/MNBrTghv","headers":{"host":"tw135037538.pkmkwvxqnn.xyz"}}}
-  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_1","type":"vmess","server":"162.159.129.245","port":8080,"cipher":"auto","uuid":"fbe45fb6-7cf1-40f0-880d-fcb5b0bfbbf3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"eu5.vpn66.eu.org"}}}
-  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_2","type":"vmess","server":"yd1.992688.xyz","port":8880,"cipher":"auto","uuid":"2fc248d5-7c81-471d-c2cf-a14e7f5aed2d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"vceu3.vpn66.eu.org"}}}
-  - {"name":"🇺🇸_US_美国_7","type":"vmess","server":"cf-lt.sharecentre.online","port":80,"cipher":"auto","uuid":"bffa23aa-ae0a-4c02-af77-2a14c8c0b81c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v004.ssrsub.com"}}}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"5.161.71.112","port":2083,"cipher":"auto","uuid":"90e968f5-58a5-42ce-a2de-c81894054563","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"5.161.44.202","port":2083,"cipher":"auto","uuid":"47b93627-da5f-4f2a-bcd6-f44ac26b90c4","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
+  - {"name":"🇩🇪_DE_德国","type":"vmess","server":"5.78.84.167","port":2083,"cipher":"auto","uuid":"90e968f5-58a5-42ce-a2de-c81894054563","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
+  - {"name":"🇺🇸_US_美国_3","type":"vless","server":"104.24.176.7","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@v2ray_god = چنل تلگرام🇮🇷@v2ray_god = چنل تلگرام🇮🇷"}}
+  - {"name":"🇳🇱_NL_荷兰->🇫🇷_FR_法国","type":"vless","server":"188.114.96.125","port":2096,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/https://zipoapps.com/digitalclock/privacy/tabrizm137/diamond_tm/diamond_tm/mdiamond_tm/diamond_tm/diamond_tm.net"}}
+  - {"name":"🇨🇳_CN_中国->🇱🇺_LU_卢森堡","type":"vmess","server":"cn-guangzhou.applebench.tech","port":18353,"cipher":"auto","uuid":"a0043275-5033-4923-9f22-b2f466a8794a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"5.161.191.55","port":2083,"cipher":"auto","uuid":"90e968f5-58a5-42ce-a2de-c81894054563","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
+  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国","type":"vless","server":"9975join.outline-vpn.cloud","port":443,"uuid":"b559fa9b-b030-4037-83f3-f23576440335","tls":true,"servername":"leaf.appreviewcenter.com","network":"ws","ws-opts":{"path":"/nimws"}}
+  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"tunneltransfer.bpyjc.com","port":80,"cipher":"auto","uuid":"22fede49-0280-4472-980e-4549f8bcb53c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"us.bpyjc.com"}}}
+  - {"name":"🇺🇸_US_美国->🇨🇦_CA_加拿大","type":"vmess","server":"camtlebb.76898102.xyz","port":2095,"cipher":"auto","uuid":"0e8f0867-85a0-39af-a5eb-3685d26f8413","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/funsdfrh","headers":{"host":"camtleb.76898102.xyz"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -210,16 +211,16 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+      - 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
       - 🇺🇸_US_美国_4
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
-      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
 
 rules:
 # 本地/局域网地址
